<resources>
    <string name="app_name">EagleQuoteTrial</string>
    <string name="add_client">Add Client</string>
    <string name="optional">Optional</string>
    <string name="header_content">Here is a rough guide for selecting an Occupational Class. Note that, because of the variations between insurers, sometime the only way to know for sure is to call an underwriter.</string>
    <string name="class1_content">Professional (usually tertiary qualified) typically earning over $80,000 per anum</string>
    <string name="occupational_class_1">Occupational Class 1</string>
    <string name="occupational_class_2">Occupational Class 2</string>
    <string name="class2_content">Office workers who do not perform any manual labor</string>
    <string name="occupational_class_3">Occupational Class 3</string>
    <string name="class3_content">Skilled traders people (for example a qualified builder) or non-desk based workers (for example technician, shopkeeper, etc)</string>
    <string name="occupational_class_5">Occupational Class 5</string>
    <string name="occupational_class_4">Occupational Class 4</string>
    <string name="class4_content">Skilled or semi-skilled manual workers and heavy machinery operators who are not exposed to health hazards</string>
    <string name="class5_content">Housewife / Househusband / Student</string>
    <string name="occupation_guide">Occupation Guide</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="occupation">
        <item>Class 1</item>
        <item>Class 2</item>
        <item>Class 3</item>
        <item>Class 4</item>
        <item>Class 5</item>
    </string-array>

    <string-array name="employment_status">
        <item>Employed</item>
        <item>Self-Employed</item>
        <item>Self-Employed &lt; 3 years</item>
        <item>Non-Earner</item>
    </string-array>

    <string-array name="excess">
        <item>Nil - Excess</item>
        <item>$250 Excess</item>
        <item>$500 Excess</item>
        <item>$1000 Excess</item>
        <item>$2000 Excess</item>
        <item>$3000 Excess</item>
        <item>$4000 Excess</item>
        <item>$4000 Excess</item>
        <item>$6000 Excess</item>
        <item>$10000 Excess</item>
    </string-array>

    <string-array name="excess_int">
        <item>0</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>4000</item>
        <item>6000</item>
        <item>10000</item>
    </string-array>

    <string-array name="loading">
        <item>0%</item>
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
        <item>125%</item>
        <item>150%</item>
        <item>175%</item>
        <item>200%</item>
        <item>250%</item>
        <item>300%</item>
        <item>400%</item>
        <item>500%</item>
    </string-array>

    <string-array name="loading_int">
        <item>0</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
        <item>175</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

    <string-array name="yearly_renewable">
        <item>Yearly Renewable</item>
        <item>Level (10 Years)</item>
        <item>Level (15 Years)</item>
        <item>Level (To Age 65)</item>
        <item>Level (To Age 70)</item>
        <item>Level (To Age 80)</item>
        <item>Level (To Age 85)</item>
        <item>Level (To Age 90)</item>
        <item>Level (To Age 100)</item>
    </string-array>

    <string-array name="yearly_renewable_int">
        <item>1</item>
        <item>10</item>
        <item>15</item>
        <item>65</item>
        <item>70</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <string name="title_activity_dash">DashActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="no_results_available">No Results Available</string>
</resources>
