<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/occupational_content_bottom_padding"
        android:paddingEnd="@dimen/occupational_padding_side"
        android:paddingStart="@dimen/occupational_padding_side"
        tools:context=".view.OccupationalGuide">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/occupational_content_top_margin"
            android:text="@string/header_content"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOc1Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvOc1Name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_content_top_margin"
            android:background="@color/color_class_content"
            android:paddingBottom="@dimen/occupational_content_bottom_padding"
            android:paddingEnd="@dimen/occupational_content_padding_side"
            android:paddingStart="@dimen/occupational_content_padding_side"
            android:paddingTop="@dimen/occupational_content_top_padding"
            android:text="@string/class1_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvOc1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_margin_top"
            android:background="@drawable/class_header"
            android:paddingBottom="@dimen/padding_occupational_up_down"
            android:paddingEnd="@dimen/padding_occupational_start_end"
            android:paddingStart="@dimen/padding_occupational_start_end"
            android:paddingTop="@dimen/padding_occupational_up_down"
            android:text="@string/occupational_class_1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvOc2Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvOc2Name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_content_top_margin"
            android:background="@color/color_class_content"
            android:paddingBottom="@dimen/occupational_content_bottom_padding"
            android:paddingEnd="@dimen/occupational_content_padding_side"
            android:paddingStart="@dimen/occupational_content_padding_side"
            android:paddingTop="@dimen/occupational_content_top_padding"
            android:text="@string/class2_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvOc2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOc1Content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_margin_top"
            android:background="@drawable/class_header"
            android:paddingBottom="@dimen/padding_occupational_up_down"
            android:paddingEnd="@dimen/padding_occupational_start_end"
            android:paddingStart="@dimen/padding_occupational_start_end"
            android:paddingTop="@dimen/padding_occupational_up_down"
            android:text="@string/occupational_class_2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvOc3Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvOc3Name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_content_top_margin"
            android:background="@color/color_class_content"
            android:paddingBottom="@dimen/occupational_content_bottom_padding"
            android:paddingEnd="@dimen/occupational_content_padding_side"
            android:paddingStart="@dimen/occupational_content_padding_side"
            android:paddingTop="@dimen/occupational_content_top_padding"
            android:text="@string/class3_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvOc3Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOc2Content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_margin_top"
            android:background="@drawable/class_header"
            android:paddingBottom="@dimen/padding_occupational_up_down"
            android:paddingEnd="@dimen/padding_occupational_start_end"
            android:paddingStart="@dimen/padding_occupational_start_end"
            android:paddingTop="@dimen/padding_occupational_up_down"
            android:text="@string/occupational_class_3"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvOc4Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvOc4Name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_content_top_margin"
            android:background="@color/color_class_content"
            android:paddingBottom="@dimen/occupational_content_bottom_padding"
            android:paddingEnd="@dimen/occupational_content_padding_side"
            android:paddingStart="@dimen/occupational_content_padding_side"
            android:paddingTop="@dimen/occupational_content_top_padding"
            android:text="@string/class4_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvOc4Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOc3Content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_margin_top"
            android:background="@drawable/class_header"
            android:paddingBottom="@dimen/padding_occupational_up_down"
            android:paddingEnd="@dimen/padding_occupational_start_end"
            android:paddingStart="@dimen/padding_occupational_start_end"
            android:paddingTop="@dimen/padding_occupational_up_down"
            android:text="@string/occupational_class_4"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvOc5Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvOc5Name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_content_top_margin"
            android:background="@color/color_class_content"
            android:paddingBottom="@dimen/occupational_content_bottom_padding"
            android:paddingEnd="@dimen/occupational_content_padding_side"
            android:paddingStart="@dimen/occupational_content_padding_side"
            android:paddingTop="@dimen/occupational_content_top_padding"
            android:text="@string/class5_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvOc5Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOc4Content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/occupational_margin_top"
            android:background="@drawable/class_header"
            android:paddingBottom="@dimen/padding_occupational_up_down"
            android:paddingEnd="@dimen/padding_occupational_start_end"
            android:paddingStart="@dimen/padding_occupational_start_end"
            android:paddingTop="@dimen/padding_occupational_up_down"
            android:text="@string/occupational_class_5"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>